Closed
Bug 974177
Opened 11 years ago
Closed 11 years ago
PointerCancel must trigger PointerOut event
Categories
(Core :: DOM: Events, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: oleg.romashin, Assigned: oleg.romashin)
Details
Attachments
(1 file)
|
4.09 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 (Beta/Release)
Build ID: 20140212131424
Steps to reproduce:
Test
https://github.com/prolificcoder/pointerevents-test/blob/master/pointercancel.html
Actual results:
Nothing happened, PointerOut not dispatched on cancel
Expected results:
https://dvcs.w3.org/hg/pointerevents/raw-file/tip/pointerEvents.html#the-pointercancel-event
After dispatching the pointercancel event, a user agent MUST also dispatch a pointerout event followed by a pointerleave event.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8377918 -
Flags: review?(bugs)
Updated•11 years ago
|
Assignee: nobody → oleg.romashin
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•11 years ago
|
Attachment #8377918 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 2•11 years ago
|
||
Comment 3•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in
before you can comment on or make changes to this bug.
Description
•