Bug 974177 - PointerCancel must trigger PointerOut event. r=smaug